# chicago_crime_data_cli

./: .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  README_IMPROVEMENTS.md  REFACTORING_SUMMARY.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: release.yml  test.yml
chicago_crime_downloader/: __init__.py  catalog.py  cli.py  config.py  http_client.py  io_utils.py  logging_utils.py  runners.py  soql.py  version.py
data/: download_data_v5.py  materialize_duckdb.py
data/monthly_2020_2025/monthly/2020-01/: 2020-01_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2020-02/: 2020-02_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2020-03/: 2020-03_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2020-04/: 2020-04_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2020-05/: 2020-05_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2020-06/: 2020-06_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2020-07/: 2020-07_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2020-08/: 2020-08_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2020-09/: 2020-09_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2020-10/: 2020-10_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2020-11/: 2020-11_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2020-12/: 2020-12_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2021-01/: 2021-01_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2021-02/: 2021-02_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2021-03/: 2021-03_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2021-04/: 2021-04_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2021-05/: 2021-05_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2021-06/: 2021-06_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2021-07/: 2021-07_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2021-08/: 2021-08_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2021-09/: 2021-09_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2021-10/: 2021-10_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2021-11/: 2021-11_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2021-12/: 2021-12_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2022-01/: 2022-01_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2022-02/: 2022-02_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2022-03/: 2022-03_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2022-04/: 2022-04_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2022-05/: 2022-05_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2022-06/: 2022-06_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2022-07/: 2022-07_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2022-08/: 2022-08_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2022-09/: 2022-09_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2022-10/: 2022-10_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2022-11/: 2022-11_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2022-12/: 2022-12_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2023-01/: 2023-01_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2023-02/: 2023-02_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2023-03/: 2023-03_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2023-04/: 2023-04_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2023-05/: 2023-05_chunk_0001.manifest.json
data/monthly_2020_2025/monthly/2023-06/: 2023-06_chunk_0001.manifest.json
docs/: CHICAGO_DATA_RESOURCES.md  DEVELOPMENT_STRATEGY.md  DOCUMENTATION_INDEX.md  FUTURE_DIRECTIONS.md  FUTURE_ROADMAP.md  TODO_REFACTOR.md
docs/architecture/: API.md  ARCHITECTURE.md
tests/: conftest.py
tests/integration/: conftest.py  test_integration_429_retry_cli.py  test_integration_daily_one_chunk.py  test_integration_daily_zero_rows_no_dir.py  test_integration_full_resume.py  test_integration_select_projection.py
tests/unit/: test_catalog.py  test_cli_materialize.py  test_headers_with_token.py  test_make_paths.py  test_parse_date.py  test_parse_date_more.py  test_probe_count_for_day.py  test_resume_index.py  test_safe_request.py  test_soql_params.py  test_stop_requested.py  test_windowed_lazy_dirs.py  test_write_frame_fallback.py
(+29 files in other folders)
